- Added eventAfterRender callback
- Added support for weeks starting on any day of the week (thanks Bramus!)
- Added better overlapping event support with the ability to have staggered or parallel layout of overlapping events. (thanks Roderik)
- hovering over overlapping events brings them into focus (thanks Roderik)



**Thanks to everyone who logged issues and made suggestions in this release. 


2009-06-19 - 1.2 
- Added better layout support for overlapping of events
- Added ability to supply formatters for date and time
- Added improved demo with creation / editing of events using jquery ui.
- Added option to only display hours defined in the 'businessHours' config option.
- Migrated code base to extend jquery-ui widget.
- Improved inline method documentation.
- Added 'readonly' config option to flag the entire calendar as readonly, preventing creation, dragging, dropping and resizing of events.
- Added ability to configure day, month names for better i18n support
- Fixed bug with IE7 resizing once an event gets to 2 timeslots or smaller

 
2009-06-08 - 1.1.3
- Removed console.log that was causing issues in IE.
- Fixed an issue with nav buttons in certain environments


2009-05-21 - 1.1.2
- Fixed problem in safari and chrome where new events where not being created due to lack of event bubbling of mousedown and mouseup events.

2009-05-17- 1.1.1
- Fixed problem with calculation of end date passed to data functions / url
- Updating scrolling to hour to only occur on first render
- Added code to check for changed options after loading data before actually re-rendering the calendar.


2009-05-16 - 1.1
- Extended the events data structure to allow options to be passed back to the calendar with event data. This has 
	resulted in a config option name change. The events option is now called 'data'. The data option can be either an array 
	of calendar events or an object containing a property called 'events' which is the events data array. The data option 